dhall/tests/type-inference/failure/unit/RecursiveRecordTypeMergeOverlapping.txt
Type error: error: RecordTypeMergeRequiresRecordType
 --> <current file>:1:1
  |
1 | { x : Bool } ⩓ { x : Natural }
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ RecordTypeMergeRequiresRecordType
  |
